# workshop-mcp-server

./: .containerignore  .env.template  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTION_GUIDE.md  CONTRIBUTION_SUMMARY.md  Containerfile  Makefile  PREREQUISITES.md  QUICK_CONTRIBUTION_STEPS.md  README.md  SETUP.md  SETUP_GUIDE.md  compose.yaml  mcp-config.json  pyproject.toml  start_dashboard.sh
.cursor/: mcp-rules.md  rules.md  template-transform-rules.md
.cursor/skills/must-gather-analyzer/: SKILL.md
examples/: fastmcp_client.py  langgraph_client.py  run_langgraph_react_agent.py  run_mcp_server_with_protocol.py  sample_langgraph_client.py  sample_mcp_client_http.py
integrations/: README.md  example_all_integrations.py  gemini_function_calling.py  gemini_integration.py  langchain_integration.py  openai_integration.py  requirements-integrations.txt
openshift/: README.md  all-in-one.yaml  configmap.yaml  deployment.yaml  kustomization.yaml  route.yaml  service.yaml
scripts/: README.md  transform-template.sh
skills/apiserver-debugger/: SKILL.md
skills/cluster-debugger/: SKILL.md
src/: __init__.py  __main__.py  config.py  main.py  server.py
src/config/: __init__.py  constants.py  settings.py
template_mcp_server/assets/guidance/: bookingsmaster.md  roverpeople.md
template_mcp_server/assets/metadata/: EOQ_TRANSACTION_ACV_SNAPSHOT.xlsx  (+2 more)
template_mcp_server/src/: api.py  main.py  mcp.py  server.py  settings.py
template_mcp_server/utils/: bearer_token.py
tests/: __init__.py  test_basic.py  test_container.py  test_mcp.py  test_oauth_controller.py  test_oauth_handler.py  test_oauth_service.py  test_prompts.py  test_resources.py  test_server.py  test_settings.py  test_tools.py  test_utils.py
web_gui/: app.py  cluster_debugger_commands.py  mustgather_scripts.py  ollama_client.py  requirements.txt  start_gui.sh
web_gui/static/css/: style.css
web_gui/templates/: ai_chat.html  base.html  cluster_debugger.html  code_assistant.html  code_review.html  index.html  jira_manager.html  knowledge_base.html  mustgather_analyzer.html  ocp_testing.html  polarion_qa.html  pr_review.html  regression_test_agent.html  settings.html  test_plan_generator.html  work_reports.html
workshop_mcp_server/src/: main.py
(+27 files in other folders)
